feat: add image api

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <div id="app">
-      <h2>Eender wa</h2>
+    <div id="app" class="">
+      <h1>Wait...</h1>
+      <div id="screen"></div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
